adicionando classe para criação do xml

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ excludes=
 file.reference.amqp-client-5.7.1.jar=C:\\Users\\Alex\\Downloads\\amqp-client-5.7.1.jar
 file.reference.slf4j-api-1.7.26.jar=C:\\Users\\Alex\\Downloads\\slf4j-api-1.7.26.jar
 file.reference.slf4j-simple-1.7.26.jar=C:\\Users\\Alex\\Downloads\\slf4j-simple-1.7.26.jar
+file.reference.xstream-1.4.12.jar=C:\\Users\\Alex\\Downloads\\xstream-1.4.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.amqp-client-5.7.1.jar}:\
     ${file.reference.slf4j-api-1.7.26.jar}:\
-    ${file.reference.slf4j-simple-1.7.26.jar}
+    ${file.reference.slf4j-simple-1.7.26.jar}:\
+    ${file.reference.xstream-1.4.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
